--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+html {
+  height: 100%;
+  --text-color: #ecf0f1;
+  --action-color: #e74c3c;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  outline: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  height: 100%;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
+  height: 100%;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+  background: #121212;
+  padding: 60px;
+}
+
+.scene-container {
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.scene {
+  border: 2px solid var(--text-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.paddle {
+  fill: #3498db;
+}
+
+.ball {
+  fill: var(--action-color);
+}
+
+.level {
+  font-weight: bold;
+  fill: var(--text-color);
+}
+
+.life {
+  fill: var(--action-color);
 }
